Se implementó la vista, de consultar publicaciones del blog por categorías y se trae la información desde la base de datos.
Se implementó la vista, de consultar publicaciones del blog por categorías y se trae la información desde la base de datos.

--- a/Proyectoweb/blog/templates/blog/categoria.html
+++ b/Proyectoweb/blog/templates/blog/categoria.html
@@ -45,7 +45,7 @@
       
         {% for categoria in post.categorias.all %}
         
-           <a href="{% url 'categoria' categoria.id %}" class="linkscategoria">{{categoria.nombre}}</a>  &nbsp;&nbsp;&nbsp;
+            {{categoria.nombre}} &nbsp;&nbsp;&nbsp;
 
         {% endfor %}
 
