--- a/Proyectoweb/ProyectoWebApp/static/ProyectoWebApp/css/gestion.css
+++ b/Proyectoweb/ProyectoWebApp/static/ProyectoWebApp/css/gestion.css
@@ -76,11 +76,11 @@ p {
 }
 
 .bg-faded {
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(24, 64, 8);
 }
 
 #mainNav {
-  background-color: rgb(92, 177, 207);
+  background-color: rgba(24, 64, 8);
   font-family: 'Raleway';
 }
 
@@ -229,7 +229,7 @@ p {
 }
 
 .footer {
-   background-color: rgba(42, 97, 131, 0.8);
+  background-color: rgba(24, 64, 8);
 }
 
 
@@ -277,3 +277,16 @@ ul.errorlist{
   font-style: italic;
   color: red;
 }
+
+
+.linkscategoria{
+  color: white  ! important; /* a pesar de que hay mas etilos el important nos sirve para que tome el de nosotros */
+  text-decoration: underline;
+}
+
+
+.linkscategoria:hover{
+  text-decoration: none;
+}
+
+/* ggg */
