--- a/Proyectoweb/tienda/templates/tienda/tienda.html
+++ b/Proyectoweb/tienda/templates/tienda/tienda.html
@@ -5,6 +5,35 @@
 
 {% block content  %}
 
-<div><p style="color:white ;">Tienda</p></div>
+
+
+
+
+
+
+
+
+<div class="container">
+    <div class="row">
+        {% for producto in productos %}
+        <div class="col-md-3">
+    
+          <div class="card" style="width:90% ; margin: 10px 10px;" >
+            <img src="{{producto.imagen.url}}"   class="card-img-top" >
+            <div class="card-body" style="text-align:center ;">
+
+              <h7 class="card-title">{{producto.nombre}}</h7>
+              <p class="card-text"> <b>{{producto.precio}}</b>  &nbsp;$</p>
+              <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+
+
+</div>
+
+</div>
+
 
 {% endblock  %}
