--- a/Proyectoweb/tienda/templates/tienda/tienda.html
+++ b/Proyectoweb/tienda/templates/tienda/tienda.html
@@ -14,9 +14,19 @@
 
 
 <div class="container">
+
+ <div style="float:right ;">
+  <p style="color:white ;">Texto de prueba</p>
+
+
+</div>
+
+
+
     <div class="row">
+
         {% for producto in productos %}
-        <div class="col-md-3">
+        <div class=" col-lg-3 col-md-12 col-sm-12">
     
           <div class="card" style="width:90% ; margin: 10px 10px;" >
             <img src="{{producto.imagen.url}}"   class="card-img-top" >
@@ -26,6 +36,10 @@
               <p class="card-text"> <b>{{producto.precio}}</b>  &nbsp;$</p>
               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
+            <div class="card-footer text-center">
+              <a href="#" class="btn btn-success">Agregar carro</a>
+            </div>
+
           </div>
         </div>
         {% endfor %}
