Se terminó de implementar el carrito de compras en la Tienda
Se terminó de implementar el carrito de compras en la Tienda

--- a/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -22,7 +22,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       
-        <span class="site-heading-lower">Gestión de Pedidos</span>
+        <span class="site-heading-lower">Tienda Online</span>
       </h1>
 
 
@@ -92,7 +92,7 @@
         	<a href="sample.html" class="link">Aviso legal</a> ·
         	<a href="sample.html" class="link">Cookies</a>
 		</p>
-        <p class="m-0 mbt1">&copy; Gestión de Pedidos 2020</p>
+        <p class="m-0 mbt1">&copy; Tienda Online</p>
       </div>
 	</footer>
 
