--- a/Proyectoweb/tienda/templates/tienda/tienda.html
+++ b/Proyectoweb/tienda/templates/tienda/tienda.html
@@ -16,7 +16,9 @@
 <div class="container">
 
  <div style="float:right ;">
-  <p style="color:white ;">Texto de prueba</p>
+  <p style="color:white ;"></p>
+
+  {% include "carro/widget.html" %}
 
 
 </div>
@@ -37,7 +39,7 @@
               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
             <div class="card-footer text-center">
-              <a href="#" class="btn btn-success">Agregar carro</a>
+              <a href="{% url 'carro:agregar' producto.id %}" class="btn btn-success">Agregar carro</a>
             </div>
 
           </div>
