Se implementó el registro de usuario
Se implementó el registro de usuario

--- a/Proyectoweb/contacto/templates/contacto/contacto.html
+++ b/Proyectoweb/contacto/templates/contacto/contacto.html
@@ -1,7 +1,7 @@
 {% extends "ProyectoWebApp/base.html" %}
 
 {% load static %}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -17,7 +17,9 @@
         {% csrf_token %}
 
     <table style="color: white; margin: 20px auto; ">{{miformulario.as_table}}</table>
-    <input type="submit" value="Enviar" style="width:150px"  >
+   
+    <button type="submit " class="btn btn-success btn-block">Enviar</button>
+ 
 
     </form>
 </div>
