--- a/Proyectoweb/tienda/templates/tienda/tienda.html
+++ b/Proyectoweb/tienda/templates/tienda/tienda.html
@@ -39,7 +39,7 @@
               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
             <div class="card-footer text-center">
-              <a href="{% url 'carro:agregar' producto.id %}" class="btn btn-success">Agregar carro</a>
+              <a href="{% url 'carro:agregar' producto.id %}" class="btn btn-success btn-block">Agregar </a>
             </div>
 
           </div>
