--- a/Proyectoweb/autenticacion/templates/registro/registro.html
+++ b/Proyectoweb/autenticacion/templates/registro/registro.html
@@ -2,10 +2,29 @@
 
 {% load static %}
 
+{% load crispy_forms_tags %}
+
 
 {% block content %}
 
-<h1 style="color:white ;">hola registro</h1>
+<form  method="post" style="color: white; text-align: center;width:70% ; margin: auto;">
+    {% csrf_token %}
+
+
+    <div style="width:70% ; margin: 5em;">
+
+    {{ form|crispy }}
+    
+    <button type="submit " class="btn btn-success btn-block">Registrar</button>
+ 
+
+   </div>
+
+</form>
+
+
+
+
 
 <!-- <p style="color:white ;">{{request.POST}}</p> -->
 
