--- a/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -25,6 +25,22 @@
         <span class="site-heading-lower">Tienda Online</span>
       </h1>
 
+    <div style=" text-align: right; margin-right: 100px; color: white;">
+
+      {%  if user.is_authenticated %}
+
+        Hola {{user.username}} &nbsp;&nbsp; <a href="{%url 'cerrar_sesion' %} " style="color:white ;">Cerrar Sesion</a>
+
+       
+
+      {% else %}
+
+       <a href="{%url 'logear' %}" style="color:white ;" >login</a>&nbsp;&nbsp; <a style="color:white ;" href="{%url 'Autenticacion' %}">Registrate</a>
+
+      {% endif %}
+    
+    </div>
+
 
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
