--- a/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/home.html
+++ b/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/home.html
@@ -7,7 +7,7 @@
 {% block content  %}
 
    <!-- Heading -->
-   <section class="page-section clearfix">
+   <section class="page-section clearfix" style="color:white ;">
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'ProyectoWebApp/img/principal.jpg' %}" alt="">
