--- a/Proyectoweb/blog/templates/blog/blog.html
+++ b/Proyectoweb/blog/templates/blog/blog.html
@@ -7,7 +7,7 @@
 
   {% for post in posts %}
 
-  <section class="page-section clearfix">
+  <section class="page-section clearfix" style="color:white ;">
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{{post.imagen.url}}" alt="" style="width: 50%">
