--- a/Proyectoweb/servicios/templates/servicios/servicios.html
+++ b/Proyectoweb/servicios/templates/servicios/servicios.html
@@ -7,7 +7,7 @@
 
   {% for servicio in servicios %}
 
-  <section class="page-section clearfix">
+  <section class="page-section clearfix" style="color:white ;">
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{{servicio.imagen.url}}" alt="" style="width: 50%">
