--- a/Proyectoweb/tienda/templates/tienda/tienda.html
+++ b/Proyectoweb/tienda/templates/tienda/tienda.html
@@ -18,7 +18,17 @@
  <div style="float:right ;">
   <p style="color:white ;"></p>
 
-  {% include "carro/widget.html" %}
+  {%  if request.user.is_authenticated %}
+
+
+      {% include "carro/widget.html" %}
+
+  {% else %}
+  
+   <div class="alert alert-danger text-center">iniciá sesión para realizar compra</div>
+  
+
+  {% endif %}
 
 
 </div>
