Se implementó la app pedido y enviar el pedido al email del cliente
Se implementó la app pedido y enviar el pedido al email del cliente

--- a/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/Proyectoweb/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -25,6 +25,8 @@
         <span class="site-heading-lower">Tienda Online</span>
       </h1>
 
+      
+
     <div style=" text-align: right; margin-right: 100px; color: white;">
 
       {%  if user.is_authenticated %}
@@ -109,7 +111,14 @@
         	<a href="sample.html" class="link">Cookies</a>
 		</p>
         <p class="m-0 mbt1">&copy; Tienda Online</p>
+       
       </div>
+
+      <div>
+        <h7  >Diseñada por el ingeniero: Miguel Ángel Sardo Suárez</h7>
+      </div>
+
+      
 	</footer>
 
     <!-- Bootstrap -->
